--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
+@font-face {
+  font-family: poppins;
+  src: url(./fonts/Poppins-Medium.ttf);
+}
+@font-face {
+  font-family: poppins-light;
+  src: url(./fonts/Poppins-Light.ttf);
+}
 *{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
+  font-family: 'Ubuntu', sans-serif;
 }
